// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game mutations with world as anon create game 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world as tester1 user create game 1`] = `
{
  "data": {
    "createGame": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add fog 1`] = `
{
  "data": {
    "addFogStroke": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add model 1`] = `
{
  "data": {
    "addModel": {
      "_id": Any<String>,
      "models": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "model": ObjectContaining {
            "_id": Any<String>,
          },
          "wiki": ObjectContaining {
            "_id": Any<String>,
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 add stroke 1`] = `
{
  "data": {
    "addStroke": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 delete model 1`] = `
{
  "data": {
    "deletePositionedModel": ObjectContaining {
      "_id": Any<String>,
      "models": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set character attributes 1`] = `
{
  "data": {
    "setCharacterAttributes": ObjectContaining {
      "_id": Any<String>,
      "characters": [
        ObjectContaining {
          "_id": Any<String>,
          "attributes": [
            {
              "_id": Any<String>,
              "name": "str",
              "value": 1,
            },
          ],
          "name": "tester",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set character order 1`] = `
{
  "data": {
    "setCharacterOrder": ObjectContaining {
      "_id": Any<String>,
      "characters": [
        ObjectContaining {
          "_id": Any<String>,
          "name": "tester2",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "tester",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set game map 1`] = `
{
  "data": {
    "setGameMap": ObjectContaining {
      "_id": Any<String>,
      "map": {
        "_id": Any<String>,
        "mapImage": {
          "_id": Any<String>,
          "chunks": ArrayContaining [
            {
              "_id": Any<String>,
              "fileId": Any<String>,
              "x": Any<Number>,
              "y": Any<Number>,
            },
          ],
          "height": Any<Number>,
          "width": Any<Number>,
        },
        "name": "Earth",
        "pixelsPerFoot": Any<Number>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model color 1`] = `
{
  "data": {
    "setModelColor": ObjectContaining {
      "_id": Any<String>,
      "model": ObjectContaining {
        "_id": Any<String>,
      },
      "wiki": ObjectContaining {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model position 1`] = `
{
  "data": {
    "setModelPosition": ObjectContaining {
      "_id": Any<String>,
      "model": ObjectContaining {
        "_id": Any<String>,
      },
      "wiki": ObjectContaining {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester1 set model wiki 1`] = `
{
  "data": {
    "setPositionedModelWiki": ObjectContaining {
      "_id": Any<String>,
      "wiki": {
        "_id": Any<String>,
        "name": "Earth",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user join existing game 1`] = `
{
  "data": {
    "joinGame": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": "tester",
        },
        ObjectContaining {
          "_id": Any<String>,
          "name": "Tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add fog permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add model permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game add stroke permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game delete model permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game game chat 1`] = `
{
  "data": {
    "gameChat": ObjectContaining {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game leave game 1`] = `
{
  "data": {
    "leaveGame": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set character attributes 1`] = `
{
  "data": {
    "setCharacterAttributes": ObjectContaining {
      "_id": Any<String>,
      "characters": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "attributes": [
            {
              "_id": Any<String>,
              "name": "str",
              "value": 1,
            },
          ],
          "name": "tester2",
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set character order permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set game map permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model color permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model position permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`game mutations with world with a game hosted by tester1 as tester2 user while having joined a game set model wiki permission denied 1`] = `
{
  "data": null,
  "errors": Any<Array>,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
